cluster/apps/capacitor/networkpolicies/capacitor.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: capacitor
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: capacitor
      app.kubernetes.io/instance: capacitor
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
