cluster/apps/capacitor/networkpolicies/ingress-nginx-egress-capacitor.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-capacitor
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: capacitor
            app.kubernetes.io/instance: capacitor
            "k8s:io.kubernetes.pod.namespace": flux-system
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
